# html2text

./: .gitignore  MANIFEST.in  README.md  html2text.py  pyproject.toml  tox.ini
docs/: youtube_embed_feature.md
examples/: example_youtube_preservation.py
html2text/: __init__.py  config.py  utils.py
